# more-gnome-tweaks

./: .gitignore  README.md  com.n14395.MoreTweaks.yml  pyproject.toml
data/: com.n14395.MoreTweaks.desktop  com.n14395.MoreTweaks.metainfo.xml
more_tweaks/: __init__.py  _shared.py  animation_catalog.py  animation_preview.py  animation_section.py  animations.py  app.py  custom_presets.py  data.py  models.py  preferences.py  preset_data.py  settings_backend.py  tiling_section.py  timeline_widget.py  topbar_section.py  touchpad_section.py  tweak_row.py  window.py
more_tweaks/bundled_extension/: extension.js  metadata.json
more_tweaks/bundled_extension/runtime/: base-effect.js  catalog.js  controller.js  deform-effect.js  gesture-controller.js  registry.js  shader-effect.js  transform-effect.js  utils.js
more_tweaks/bundled_extension/schemas/: com.n14395.more-tweaks.shell.gschema.xml  gschemas.compiled
repo/: summary  summary.idx
repo/refs/heads/app/com.n14395.MoreTweaks/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/summaries/: 5fdd27f7c2d910a4940d04e5f5ab29545e773e5ff422533962c6ba18752310f3-89e588dbc9f0eaf86cb202d18c9edf1b9d20bc5f32792864aa4c1d188383923e.delta
tests/: test_animation_catalog.py  test_animation_catalog_extended.py  test_custom_presets.py  test_data.py  test_filter_tweaks.py  test_models.py  test_per_app_overrides.py  test_preferences.py  test_preset_data.py  test_settings_backend.py
